--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -208,6 +208,12 @@
       margin: 16px 24px 16px 0;
     }
 
+    &
+      .create-program-settings__leverage.gv-text-field--disabled
+      .select__value {
+      color: $text-light-color;
+    }
+
     @include media-breakpoint-landscape-phone() {
       max-width: 484px;
     }
