GVW-86 add coming soon brokers

--- a/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
+++ b/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
@@ -20,6 +20,10 @@
     background-color: $panel-background-color;
   }
 
+  &--disabled {
+    cursor: not-allowed;
+  }
+
   &__active-mark {
     display: inline-flex;
     justify-content: center;
