--- a/src/components/gv-datepicker/gv-datepicker.scss
+++ b/src/components/gv-datepicker/gv-datepicker.scss
@@ -1,8 +1,13 @@
 @import "styles/_colors.scss";
+@import "styles/_constants.scss";
 
 .gv-datepicker {
   display: inline-flex;
   width: 100%;
+
+  button {
+    text-align: left;
+  }
 
   > div,
   .react-datepicker-wrapper,
@@ -12,17 +17,60 @@
   }
 }
 
-.react-datepicker {
-  border: none;
-  background-color: #273642;
+$back-color: #273642;
+$lighten-back-color: lighten($back-color, 10);
+
+.react-calendar {
+  border-radius: $border-radius;
+  border: none !important;
+  background-color: $back-color !important;
+
+  &__month-view__days__day--weekend {
+    color: $negative-color !important;
+  }
 
   &__triangle {
     display: none;
   }
 
-  &__current-month,
-  &__day-name {
+  &__navigation {
+    &__label {
+      font-size: 0.75em;
+      font-weight: bold;
+    }
+
+    button:enabled:focus,
+    button:hover,
+    button[disabled] {
+      background-color: $lighten-back-color !important;
+    }
+
+    button[disabled] {
+      background-color: rgba($lighten-back-color, 0.5) !important;
+      opacity: 0.5;
+    }
+  }
+
+  &__navigation__arrow,
+  &__navigation__label {
     color: $main-color;
+  }
+
+  &__tile {
+    color: $main-color;
+
+    &:hover {
+      background-color: $positive-color !important;
+    }
+
+    &--active {
+      background-color: $primary-color !important;
+    }
+
+    &:disabled {
+      background-color: rgba($lighten-back-color, 0.5) !important;
+      opacity: 0.5;
+    }
   }
 
   &__day {
