--- a/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
+++ b/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
@@ -21,7 +21,16 @@
   }
 
   &--disabled {
+    overflow: hidden;
     cursor: not-allowed;
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.008);
+    }
   }
 
   &__active-mark {
