--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -22,6 +22,32 @@
     }
   }
 
+  &__fee {
+    display: inline-flex;
+    position: relative;
+    top: 3px;
+    width: 230px;
+    margin-right: 24px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &-hint {
+      font-size: 12px;
+      color: $label-color;
+      letter-spacing: 0.4px;
+      position: absolute;
+      top: 86px;
+      left: 0px;
+      cursor: pointer;
+
+      & .hint__content {
+        width: 237px;
+      }
+    }
+  }
+
   &__form {
     color: $text-light-color;
   }
@@ -241,4 +267,11 @@
     margin-top: 60px;
     margin-left: 0;
   }
+}
+
+.create-program-settings__fee-hint-tooltip-content {
+  width: 248px;
+  font-size: 12px;
+  line-height: 1.6;
+  color: $text-light-color;
 }
