--- a/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
+++ b/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
@@ -20,7 +20,7 @@
     background-color: $panel-background-color;
   }
 
-  &--disabled {
+  &--coming-soon {
     overflow: hidden;
     cursor: not-allowed;
     &:after {
@@ -30,6 +30,29 @@
       width: 100%;
       height: 100%;
       background-color: rgba(255, 255, 255, 0.008);
+    }
+  }
+
+  &--coming-soon &__logo {
+    &--okex {
+      width: 61.6%;
+      height: 23%;
+    }
+    &--huobi {
+      width: 70%;
+      height: 17.5%;
+    }
+    &--just2trade {
+      width: 79%;
+      height: 11.6%;
+    }
+    &--roboforex {
+      width: 70%;
+      height: 15%;
+    }
+    &--idex {
+      width: 65.7%;
+      height: 16.2%;
     }
   }
 
@@ -48,7 +71,7 @@
     right: -8px;
   }
 
-  & img {
+  &__logo {
     width: 80%;
     height: 60%;
   }
