--- a/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
+++ b/src/pages/create-program/components/create-program-broker/broker-card/broker-card.scss
@@ -44,6 +44,16 @@
     left: 12%;
   }
 
+  &__logo {
+    width: 70%;
+    height: 30%;
+
+    &--gm {
+      width: 70%;
+      height: 13.4%;
+    }
+  }
+
   &--coming-soon &__logo {
     &--okex {
       width: 61.6%;
@@ -80,11 +90,6 @@
     content: "&#10004;";
     top: -8px;
     right: -8px;
-  }
-
-  &__logo {
-    width: 80%;
-    height: 60%;
   }
 
   @include media-breakpoint-tablet() {
