--- a/src/modules/programs-table/components/programs-table/programs.scss
+++ b/src/modules/programs-table/components/programs-table/programs.scss
@@ -274,6 +274,7 @@ $description-block-width: 250px;
     max-height: 300px;
     overflow: hidden;
     word-break: break-all;
+    white-space: pre-wrap;
   }
 
   &__chart {
