Correct head style

--- a/src/pages/dashboard/components/dashboard-assets/dashboard-funds/dashboard-funds.scss
+++ b/src/pages/dashboard/components/dashboard-assets/dashboard-funds/dashboard-funds.scss
@@ -3,6 +3,10 @@
 
 .dashboard-funds {
   &__cell {
+    font-size: $font-size-small-mobile;
+    @include media-breakpoint-landscape-phone() {
+      font-size: $font-size-small;
+    }
     &--avatar-title {
       display: flex;
       align-items: center;
