--- a/src/pages/dashboard/components/dashboard-assets/dashboard-programs/dashboard-programs.scss
+++ b/src/pages/dashboard/components/dashboard-assets/dashboard-programs/dashboard-programs.scss
@@ -1,5 +1,12 @@
+@import "styles/_breakpoint.scss";
+@import "styles/_sizes.scss";
+
 .dashboard-programs {
   &__cell {
+    font-size: $font-size-small-mobile;
+    @include media-breakpoint-landscape-phone() {
+      font-size: $font-size-small;
+    }
     &--avatar-title {
       display: flex;
       align-items: center;
