--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-chart-assets/dashboard-chart-assets.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-chart-assets/dashboard-chart-assets.scss
@@ -1,11 +1,12 @@
 @import "styles/_breakpoint.scss";
 @import "styles/_colors.scss";
 
-.dashboard-request {
+.dashboard-chart-assets {
   float: right;
   margin-top: 10px;
-  .statistic-item {
-    margin-right: 0;
+  &__title {
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
@@ -14,16 +15,12 @@
   }
 }
 
-.dashboard-request-popover {
-  min-width: 300px;
+.dashboard-chart-assets-popover {
+  min-width: 200px;
   max-height: 200px;
   padding: 20px;
 
-  @include media-breakpoint-landscape-phone() {
-    min-width: 400px;
-  }
-
-  &__request {
+  &__chart-asset {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,7 +36,7 @@
   }
 
   &__info {
-    flex: 2;
+    flex: 1;
   }
 
   &__btns {
