--- a/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-events.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-events.scss
@@ -1,4 +1,5 @@
 @import "styles/_colors.scss";
+@import "styles/_breakpoint.scss";
 @import "styles/_sizes.scss";
 @import "styles/_breakpoint.scss";
 
@@ -18,10 +19,11 @@
 
   &__title {
     font-size: $font-size-subtitle-mobile;
-    padding: $padding-middle-mobile 0;
+    padding-top: $padding-middle-mobile;
+    font-weight: 600;
     @include media-breakpoint-landscape-phone() {
       font-size: $font-size-subtitle;
-      padding: $padding-middle 0;
+      padding-top: $padding-middle;
     }
   }
 
