--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,10 +1,33 @@
 @import "styles/_sizes.scss";
 @import "styles/_breakpoint.scss";
+@import "styles/_colors.scss";
 
 .dashboard {
-  &__empty-events{
+  &__empty-events {
     height: 100%;
-    text-align: center;
+    max-width: 255px;
+  }
+
+  &__empty-events-text {
+    padding: $padding-mini 0;
+    font-size: $font-size-small;
+    font-weight: 500;
+    line-height: 1.46;
+    letter-spacing: 0.7px;
+    opacity: 0.4;
+  }
+
+  &__empty-events-item {
+    padding: $padding-small 0;
+    display: flex;
+    align-items: center;
+  }
+
+  &__empty-events-item-label {
+    padding-left: $padding-small;
+    font-size: $font-size-middle;
+    font-weight: 500;
+    opacity: 0.4;
   }
 
   &__row {
