--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -9,25 +9,36 @@
   }
 
   &__empty-events-text {
-    padding: $padding-mini 0;
-    font-size: $font-size-small;
+    padding: $padding-mini-mobile 0;
+    font-size: $font-size-small-mobile;
     font-weight: 500;
     line-height: 1.46;
     letter-spacing: 0.7px;
     opacity: 0.4;
+    @include media-breakpoint-landscape-phone() {
+      padding: $padding-mini 0;
+      font-size: $font-size-small;
+    }
   }
 
   &__empty-events-item {
-    padding: $padding-small 0;
+    padding: $padding-small-mobile 0;
     display: flex;
     align-items: center;
+    @include media-breakpoint-landscape-phone() {
+      padding: $padding-small 0;
+    }
   }
 
   &__empty-events-item-label {
-    padding-left: $padding-small;
-    font-size: $font-size-middle;
+    padding-left: $padding-small-mobile;
+    font-size: $font-size-middle-mobile;
     font-weight: 500;
     opacity: 0.4;
+    @include media-breakpoint-landscape-phone() {
+      padding-left: $padding-small;
+      font-size: $font-size-middle;
+    }
   }
 
   &__row {
@@ -47,8 +58,8 @@
 
   &__portfolio-events-aside {
     display: flex;
-    min-width: 315px;
     @include media-breakpoint-landscape-phone() {
+      min-width: 315px;
       margin-left: 2rem;
     }
   }
