--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-chart-assets/dashboard-chart-assets.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-chart-assets/dashboard-chart-assets.scss
@@ -25,6 +25,7 @@
     align-items: center;
     justify-content: space-between;
     color: $text-accent-color;
+    cursor: pointer;
     & > * {
       flex: 1;
     }
