--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -57,9 +57,11 @@
 
   &__portfolio-events-aside {
     display: flex;
+    margin-top: $padding-small;
     @include media-breakpoint-landscape-phone() {
       min-width: 315px;
       margin-left: 2rem;
+      margin-top: 0;
     }
   }
 
@@ -82,6 +84,9 @@
   }
 
   &__assets {
-    margin-top: 2rem;
+    margin-top: $padding-small;
+    @include media-breakpoint-landscape-phone() {
+      margin-top: $padding-middle;
+    }
   }
 }
