--- a/src/pages/programs/program-details/components/program-details-statistic-section/program-details-chart-section/program-details-chart-section.scss
+++ b/src/pages/programs/program-details/components/program-details-statistic-section/program-details-chart-section/program-details-chart-section.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 300px;
 
   &__title {
     font-size: $font-size-subtitle-mobile;
