--- a/src/pages/create-program/components/create-program-settings/create-program-settings.scss
+++ b/src/pages/create-program/components/create-program-settings/create-program-settings.scss
@@ -135,6 +135,8 @@
     font-size: 11px;
     color: $label-color;
     letter-spacing: 0.2px;
+    width: 210px;
+    line-height: 1.4;
   }
 
   &__logo-section {
