--- a/src/pages/profile/settings/profile-image/profile-image.scss
+++ b/src/pages/profile/settings/profile-image/profile-image.scss
@@ -6,10 +6,11 @@
     color: $label-color;
     letter-spacing: 0.2px;
     margin-bottom: 16px;
+    width: 250px;
   }
 
   &__submit-btn {
-    margin-top: 30px;
+    margin-top: 40px;
     color: $primary-color;
     font-size: 16px;
     font-weight: 600;
