--- a/src/shared/components/form/input-image/input-image.scss
+++ b/src/shared/components/form/input-image/input-image.scss
@@ -4,6 +4,20 @@
 .input-image {
   width: 200px;
   height: 200px;
+  position: relative;
+
+  &--error {
+    border-color: $text-error;
+  }
+
+  &__error {
+    position: absolute;
+    bottom: -34px;
+    color: $text-error;
+    font-size: 0.7em;
+    width: 100%;
+    text-align: center;
+  }
 
   border: 2px solid $separator-color;
 
