Removed filters from transactions in wallet

--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -79,6 +79,7 @@ $create-icon-width: 140px;
   }
 
   &__filters {
+    width: 100%;
     font-size: $th-font-size/1.5;
     display: flex;
     flex: 1;
