Add in request to dashboard

--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-portfolio-chart-section.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-portfolio-chart-section.scss
@@ -23,6 +23,10 @@
     max-height: 500px;
   }
 
+  &__actions {
+    float: right;
+  }
+
   .dashboard-portfolio-chart-stat {
     &__statistic-item {
       margin-top: 15px;
