--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-in-requests/dashboard-in-requests.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-in-requests/dashboard-in-requests.scss
@@ -1,11 +1,18 @@
 @import "styles/_breakpoint.scss";
 @import "styles/_colors.scss";
 
-.dashboard-chart-assets {
+.dashboard-request {
+  display: flex;
   margin-top: 10px;
-  &__title {
-    display: flex;
-    align-items: center;
+  .statistic-item {
+    margin-right: 0;
+    &__heading {
+      margin-bottom: 0;
+    }
+
+    &__value {
+      font-size: 13px;
+    }
   }
 
   &__icon {
@@ -14,17 +21,20 @@
   }
 }
 
-.dashboard-chart-assets-popover {
-  min-width: 200px;
+.dashboard-request-popover {
+  min-width: 300px;
   max-height: 200px;
-  padding: 30px;
+  padding: 20px;
 
-  &__chart-asset {
+  @include media-breakpoint-landscape-phone() {
+    min-width: 400px;
+  }
+
+  &__request {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: $text-accent-color;
-    cursor: pointer;
     & > * {
       flex: 1;
     }
@@ -36,7 +46,7 @@
   }
 
   &__info {
-    flex: 1;
+    flex: 2;
   }
 
   &__btns {
@@ -44,12 +54,6 @@
     .gv-btn {
       padding: 0;
     }
-  }
-
-  &__header {
-    font-size: 12px;
-    margin-bottom: 10px;
-    color: $text-color;
   }
 
   &__title {
