--- a/src/components/chip/chip.scss
+++ b/src/components/chip/chip.scss
@@ -5,6 +5,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  min-height: 36px;
   border-radius: 8px;
   padding: 7px 13px;
   box-sizing: border-box;
