--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-in-requests/dashboard-in-requests.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-in-requests/dashboard-in-requests.scss
@@ -6,6 +6,12 @@
   margin-top: 10px;
   .statistic-item {
     margin-right: 0;
+    &__heading {
+      margin-bottom: 0;
+    }
+    &__value {
+      font-size: 13px;
+    }
   }
 
   &__icon {
