--- a/src/pages/dashboard/components/dashboard-assets/dashboard-assets.scss
+++ b/src/pages/dashboard/components/dashboard-assets/dashboard-assets.scss
@@ -2,9 +2,9 @@
 @import "styles/_breakpoint.scss";
 
 .dashboard-assets {
-  padding: $padding-middle-mobile 0;
+  padding-top: $padding-middle-mobile;
   @include media-breakpoint-landscape-phone() {
-    padding: $padding-middle 0;
+    padding-top: $padding-middle;
   }
   &__head {
     padding-left: $padding-middle-mobile;
