--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -21,10 +21,6 @@ $create-icon-width: 140px;
 .table {
   width: 100%;
   border-spacing: 0;
-  margin-bottom: $padding-middle-mobile;
-  @include media-breakpoint-landscape-phone() {
-    margin-bottom: $padding-middle;
-  }
   .message {
     padding: $padding;
     text-align: center;
@@ -123,7 +119,7 @@ $create-icon-width: 140px;
     box-sizing: border-box;
     align-items: center;
     flex-grow: 1;
-    padding: 0 $padding-small-mobile;
+    padding: $padding-small-mobile;
     overflow: hidden; // Or flex might break
     list-style: none;
     font-weight: normal;
@@ -224,7 +220,7 @@ $create-icon-width: 140px;
       font-size: $th-font-size;
     }
     &__cell {
-      padding: 0 $padding-small;
+      padding: $padding-small;
     }
     &__body {
       font-size: $td-font-size;
