--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -21,6 +21,10 @@ $create-icon-width: 140px;
 .table {
   width: 100%;
   border-spacing: 0;
+  margin-bottom: $padding-middle-mobile;
+  @include media-breakpoint-landscape-phone() {
+    margin-bottom: $padding-middle;
+  }
   .message {
     padding: $padding;
     text-align: center;
