--- a/src/modules/programs-table/components/programs-table/programs.scss
+++ b/src/modules/programs-table/components/programs-table/programs.scss
@@ -268,6 +268,7 @@ $description-block-width: 250px;
     letter-spacing: 0.4px;
     color: #fff;
     margin-bottom: $padding/2/1.5;
+    font-weight: 600;
   }
 
   &__description {
