--- a/src/modules/funds-table/components/funds-table/funds-table.scss
+++ b/src/modules/funds-table/components/funds-table/funds-table.scss
@@ -29,6 +29,7 @@ $chart-width: 160px;
 
 .funds-table__cell {
   padding: 0 $padding-small;
+  white-space: nowrap;
   & .fund-assets {
     flex-direction: row;
     flex-wrap: nowrap;
@@ -46,12 +47,11 @@ $chart-width: 160px;
       padding: 0;
     }
     .program-avatar {
-      width: 20px;
+      width: 40px;
       margin: 0;
-      padding-right: $padding-mini-mobile;
+      padding-right: $padding-small-mobile;
       @include media-breakpoint-landscape-phone() {
-        width: 40px;
-        padding-right: $padding-mini;
+        padding-right: $padding-small;
       }
     }
     @include media-breakpoint-landscape-phone() {
@@ -62,6 +62,7 @@ $chart-width: 160px;
   }
   &--title {
     min-width: 50px;
+    padding: 0;
     div {
       padding: $padding-small/10;
     }
