--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -123,7 +123,7 @@ $create-icon-width: 140px;
     box-sizing: border-box;
     align-items: center;
     flex-grow: 1;
-    padding: $padding-small-mobile;
+    padding: $padding-small-mobile 0;
     overflow: hidden; // Or flex might break
     list-style: none;
     font-weight: normal;
@@ -224,7 +224,7 @@ $create-icon-width: 140px;
       font-size: $th-font-size;
     }
     &__cell {
-      padding: $padding-small;
+      padding: $padding-small 0;
     }
     &__body {
       font-size: $td-font-size;
