Corrected border color of level program

--- a/src/modules/table/components/table.scss
+++ b/src/modules/table/components/table.scss
@@ -102,6 +102,9 @@ $create-icon-width: 140px;
     padding: 0 1.5rem;
     &:not(.table__row--head):hover {
       background-color: #212c34;
+      & .program-avatar__level{
+        border-color: #212c34;
+      }
     }
   }
 
