--- a/src/modules/programs-table/components/programs-table/programs.scss
+++ b/src/modules/programs-table/components/programs-table/programs.scss
@@ -241,6 +241,9 @@ $description-block-width: 250px;
     &--name {
       margin-left: $padding/2;
     }
+    & .program-avatar__level {
+      border-color: $secondary-color;
+    }
   }
 
   &__title {
