--- a/src/pages/create-fund/components/create-fund-settings/create-fund-settings.scss
+++ b/src/pages/create-fund/components/create-fund-settings/create-fund-settings.scss
@@ -219,6 +219,43 @@ $asset-height-mobile: $asset-height/$divider-text;
     position: relative;
   }
 
+  &__fee {
+    display: inline-flex;
+    position: relative;
+    top: 3px;
+    width: 250px;
+    margin-right: 24px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &:first-child {
+      margin-bottom: 16px;
+    }
+
+    &-hint {
+      font-size: 12px;
+      color: $label-color;
+      letter-spacing: 0.4px;
+      position: absolute;
+      top: 86px;
+      left: 0px;
+      cursor: pointer;
+
+      & .hint__content {
+        width: 237px;
+      }
+    }
+
+    @include media-breakpoint-phone() {
+      width: 300px;
+    }
+    @include media-breakpoint-landscape-phone() {
+      width: 500px;
+    }
+  }
+
   &__image {
     box-sizing: border-box;
     width: 170px;
@@ -439,4 +476,11 @@ $asset-height-mobile: $asset-height/$divider-text;
     line-height: 1.67;
     letter-spacing: 0.3px;
   }
+}
+
+.create-fund-settings__fee-hint-tooltip-content {
+  width: 248px;
+  font-size: 12px;
+  line-height: 1.6;
+  color: $text-light-color;
 }
