--- a/src/modules/funds-table/components/funds-table/funds-table.scss
+++ b/src/modules/funds-table/components/funds-table/funds-table.scss
@@ -37,6 +37,9 @@ $chart-width: 160px;
   & .fund-asset {
     margin-bottom: 0;
   }
+  &--amount {
+    white-space: nowrap;
+  }
   &--avatar-title {
     display: flex;
     flex-direction: row;
