Changed formatting values in program-details

--- a/src/pages/programs/program-details/components/program-details-description-section/program-details-investment/program-details-investment.scss
+++ b/src/pages/programs/program-details/components/program-details-description-section/program-details-investment/program-details-investment.scss
@@ -22,6 +22,7 @@ $withdraw-button-width-mobile: $withdraw-button-width/$divider-text;
     font-size: $font-size-subtitle-mobile;
     letter-spacing: 0.21px;
     padding-bottom: $padding-middle-mobile;
+    font-weight: 600;
     @include media-breakpoint-landscape-phone() {
       font-size: $font-size-subtitle;
       padding-bottom: $padding-middle;
