GVW add fund notification enabling indicator

--- a/src/pages/funds/fund-details/components/fund-details-description-section/fund-details-description/fund-details-description.scss
+++ b/src/pages/funds/fund-details/components/fund-details-description-section/fund-details-description/fund-details-description.scss
@@ -15,8 +15,8 @@
     height: 50px / $divider-title;
     padding: 15px / $divider-padding;
     justify-content: space-between;
-    &__container{
-      &--others-count{
+    &__container {
+      &--others-count {
         cursor: pointer;
       }
     }
@@ -205,6 +205,9 @@
     .icon path {
       stroke: $label-color;
     }
+    &-icon svg [stroke] {
+      stroke: $label-color;
+    }
     .icon--ring {
       width: 27px;
       height: 27px;
@@ -225,6 +228,19 @@
       letter-spacing: 0.3px;
       color: $main-color;
       text-align: center;
+    }
+
+    & &-icon--active path {
+      fill: $primary-color;
+      stroke: $primary-color;
+    }
+
+    &:hover &-icon--active path {
+      stroke: $text-accent-color;
+    }
+
+    &-icon-notification path {
+      stroke: $label-color;
     }
   }
   @include media-breakpoint-phone() {
