--- a/src/pages/programs/program-details/components/program-details-description-section/program-details-description/program-details-description.scss
+++ b/src/pages/programs/program-details/components/program-details-description-section/program-details-description/program-details-description.scss
@@ -211,6 +211,9 @@
       width: 27px;
       height: 27px;
     }
+    &-icon svg [stroke] {
+      stroke: $label-color;
+    }
     &:hover {
       path {
         stroke: $text-accent-color;
