--- a/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-portfolio-chart-section.scss
+++ b/src/pages/dashboard/components/dashboard-portfolio-chart-section/dashboard-portfolio-chart-section.scss
@@ -3,6 +3,17 @@
 @import "styles/_sizes.scss";
 
 .dashboard-portfolio-chart-section {
+  position: relative;
+
+  .chart-loader {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
   & div {
     box-sizing: border-box;
   }
