--- a/src/pages/funds/fund-details/components/fund-details-description-section/fund-details-description/fund-details-description.scss
+++ b/src/pages/funds/fund-details/components/fund-details-description-section/fund-details-description/fund-details-description.scss
@@ -111,7 +111,13 @@
   }
 
   &__invest-button-container {
-    padding: $padding-middle-mobile 0;
+    padding-bottom: $padding-middle-mobile;
+    & > button {
+      margin-top: $padding-middle-mobile;
+    }
+    :not(:last-child) {
+      margin-right: $padding-middle-mobile;
+    }
   }
 
   &__subheading {
@@ -279,7 +285,13 @@
       line-height: $font-size-middle * 2;
     }
     &__invest-button-container {
-      padding: $padding-middle 0;
+      padding-bottom: $padding-middle;
+      & > button {
+        margin-top: $padding-middle;
+      }
+      :not(:last-child) {
+        margin-right: $padding-middle;
+      }
     }
     &__short-statistic-subheading {
       margin-bottom: $padding-small/2;
