--- a/src/pages/programs/program-details/components/program-details-description-section/program-details-description/program-details-description.scss
+++ b/src/pages/programs/program-details/components/program-details-description-section/program-details-description/program-details-description.scss
@@ -118,7 +118,10 @@
   }
 
   &__invest-button-container {
-    padding: $padding-middle-mobile 0;
+    padding-bottom: $padding-middle-mobile;
+    & > button {
+      margin-top: $padding-middle-mobile;
+    }
     :not(:last-child) {
       margin-right: $padding-middle-mobile;
     }
@@ -285,7 +288,10 @@
       line-height: $font-size-middle * 2;
     }
     &__invest-button-container {
-      padding: $padding-middle 0;
+      padding-bottom: $padding-middle;
+      & > button {
+        margin-top: $padding-middle;
+      }
       :not(:last-child) {
         margin-right: $padding-middle;
       }
