--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -3,12 +3,43 @@
 
 .dialog {
   position: relative;
-  width: 100%;
-  max-width: 360px;
   border-radius: 8px;
   background-color: $secondary-background-color;
   z-index: 1300;
-  overflow: auto;
+  max-width: 360px;
+  width: 100%;
+  margin: 2rem auto;
+  overflow: hidden;
+
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    min-height: 100vh;
+  }
+
+  &__backdrop {
+    z-index: 1 !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    min-width: 100%;
+    height: 100vh;
+    min-height: 100%;
+  }
+
+  &__background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.7;
+    z-index: -1;
+  }
 
   &-list {
     list-style-type: none;
@@ -65,6 +96,7 @@
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+    z-index: 2;
 
     &--inside {
       right: 10px;
@@ -72,6 +104,7 @@
     }
 
     &--outside {
+      position: fixed;
       display: none;
       top: 10%;
       right: 10%;
